screensaver now works. fixed mobile spacing. added highlight to hello-spans

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -600,3 +600,31 @@ pre {
   }
 
 }
+
+/**
+ * Screen Saver
+ */
+
+#screen-saver-player{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 1000;
+}
+
+.zoom-overlay.overlay-dark{
+  background: black;
+  z-index: 999;
+}
+
+.video-overlay{
+  z-index:1001;
+  height:100%;
+  width:100%;
+  position:fixed;
+  top:0;
+  left:0;
+}
