--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -115,7 +115,7 @@ footer{
   footer{
     margin: 0;
     padding-top: 10px;
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     .footer-wrapper {
       margin: 10px auto 0 auto;
     }
